_sub/compute/k8s-traefik-flux/values/config-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${deploy_name}-dashboard
  namespace: ${namespace}
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${dashboard_ingress_host}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      services:
        - kind: TraefikService
          name: api@internal
